--- a/src/rename/who-am-i.mdx
+++ b/src/rename/who-am-i.mdx
@@ -1,3 +1,7 @@
+---
+title: HELLO MDX
+---
+
 ### My name's Juan Luis Rojas León.
 
 When I was 15 years old I discovered this incredible world of programming, after that I knew what my life purpose was going to be.
